# obsidian-curator

./: .gitignore  CHANGELOG.md  README.md  config.yaml  install.sh  pyproject.toml  requirements.txt  run_gui.sh  test_ai_classification.py  test_basic_functionality.py
config/: classification_config.yaml  models_config.yaml  models_config.yaml.backup  models_config_optimized.yaml  vault_config.yaml
docs/: 250824_IMPROVEMENTS_IMPLEMENTATION_GUIDE.md  AI_CONTENT_CLASSIFICATION.md  APP_SUMMARY.md  CLASSIFICATION_IMPROVEMENTS.md  CLEANUP_AND_ANALYSIS_SUMMARY.md  CONTENT_PROCESSING.md  CURATION_DETAILED_ANALYSIS.md  CURATION_QUALITY_DIAGNOSIS.md  ENHANCEMENT_QUICK_REFERENCE.md  ENHANCEMENT_TASK_LIST.md  FUNCTIONALITY_GUIDE.md  HUMAN_VALIDATION.md  HYBRID_APPROACH.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  OVERHAUL_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ANALYSIS_REPORT.md  README.md  SETUP.md  SETUP_GUIDE.md  TESTING_GUIDE.md  THEMATIC_CLASSIFICATION_ANALYSIS.md
examples/: advanced_curation.py  basic_curation.py
legacy/: README.md  filter_notes.py  loading_notes.py  migrate_from_old.py
my-writings/: Fiscal illusions in Public-Private Partnerships  LinkedIn.md  La odisea de entender los PGE  LinkedIn.md  Operational Risk in PPPs, in the age of climate and technosocial complex  LinkedIn.md  Relevant_Notes_Summary.md  Spain's civil engineering sector Competent but uncompetitive  LinkedIn.md  Takeaways from the 2024 Global Tolling Summit.md  Technical Issues, Feasibility and Bankability of Road PPPs in Spain.  LinkedIn.md  The Consultants' Cold War  LinkedIn.md  The PPP crisis. Part 1 Intro  LinkedIn.md  The PPP crisis. Part 2 History  LinkedIn.md  The PPP crisis. Part 3 The current model  LinkedIn.md  The PPP crisis. Part 4 Financing  LinkedIn.md  The PPP crisis. Part 5 Efficiency  LinkedIn.md  The PPP crisis. Part 6 Long-term value creation  LinkedIn.md  The Paradox of Transparency  LinkedIn.md  The Strategic Case for Railway Infrastructure Funding  LinkedIn.md  The case for redundancy in infrastructure  LinkedIn.md  merged.md
note_curator/: __init__.py
obsidian_curator/: __init__.py  ai_analyzer.py  ai_content_classifier.py  cli.py  clutter_patterns.txt  content_extractor.py  content_processor.py  core.py  deduplication.py  gui.py  models.py  note_discovery.py  specialized_processors.py  theme_classifier.py  triage.py  vault_organizer.py
scripts/: README.md  analyze_test_results.py  (+13 more)
(+18 files in other folders)
