[tool.poetry]
name = "obsidian-curator"
version = "0.1.0"
description = "AI-powered curation system for Obsidian vaults that automatically analyzes, categorizes, and organizes your notes using local AI models via Ollama"
authors = ["Jose Cordovilla <jose@example.com>"]
readme = "README.md"
packages = [{include = "obsidian_curator"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.0"
markdown = "^3.5.1"
beautifulsoup4 = "^4.12.2"
lxml = "^5.2.0"
ollama = "^0.1.7"
loguru = "^0.7.2"
tqdm = "^4.66.1"
click = "^8.1.7"
rich = "^13.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[tool.poetry.scripts]
obsidian-curator = "obsidian_curator.cli:main"

[tool.poetry.urls]
Homepage = "https://github.com/yourusername/obsidian-curator"
Repository = "https://github.com/yourusername/obsidian-curator"
Issues = "https://github.com/yourusername/obsidian-curator/issues"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
